# csc299-project

./: README.md  SUMMARY.md  Task1  ai_agent.py  chat.py  chat_logger.py  csc299-project  demo_tasks.json  knowledge.py  knowledge_data.json  main.py  tasks_data.json  web_app.py
conversations/: my-notes.md
final/: ai_agent.py  chat.py  chat_logger.py  demo_tasks.json  knowledge.py  knowledge_data.json  main.py  tasks.py  tasks_data.json
final/templates/: index.html
pkms/: __init__.py  models.py
pkms/storage/: json_store.py  sqlite_store.py
scripts/: pkms.sh  pkms_menu.py
tasks2/: README.md  main.py
tasks2/src/: ai_assistant.py  command_interface.py  knowledge_manager.py  task_manager.py
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py  knowledge_manager.py  task_manager.py
tasks3/tests/: test_knowledge_manager.py  test_task_manager.py
tasks4/: README.md  main.py  pyproject.toml
tasks5/: README.md  pyproject.toml
tasks5/src/tasks_manager/: __init__.py  __main__.py  store.py  task.py
templates/: index.html  suggest.html
tests/: README.md
youtube-video/: README.md
