[project]
name = "tasks-manager"
version = "0.1.0"
description = "A simple command-line task management application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tasks = "tasks_manager.__main__:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
